@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-31T08:10:22Z",
-  "count_outdated" : 652,
-  "uniques_outdated" : 137,
+  "timestamp" : "2022-11-01T08:09:54Z",
+  "count_outdated" : 653,
+  "uniques_outdated" : 138,
   "count" : 667,
   "uniques" : 144,
   "views" : [
-    {
-      "timestamp": "2022-10-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-25T00:00:00Z",
       "count": 3,
