@@ -1,12 +1,7 @@
 {
-  "count": 15,
-  "uniques": 7,
+  "count": 14,
+  "uniques": 6,
   "views": [
-    {
-      "timestamp": "2022-10-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-10-25T00:00:00Z",
       "count": 3,
