@@ -1,3 +1,11 @@
+2022-11-01T08:09:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3367843168 # 988
+* notice: last 14d: unq all: 6 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 137 652 / 144 667
+* notice: next accum: outdated-unq outdated-all / unq all: 138 653 / 144 667
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-18] / []
+
 2022-10-31T08:10:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3359623348 # 985
 * notice: last 14d: unq all: 7 15
